<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.musicplayer.MainActivity">

    <ImageView
        android:id="@+id/songImage"
        style="@style/PlayerImageStyle"
        android:contentDescription="@string/playerIcon_SongIcon"
        android:src="@drawable/ic_player_central_icon" />

    <LinearLayout
        android:id="@+id/artist_song_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/songImage"
        android:layout_marginBottom="@dimen/marginUpDown">

        <TextView
            android:id="@+id/songName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            tools:text="test_song"/>

        <TextView
            android:id="@+id/songArtist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="test_artist"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/artist_song_id"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/playerButtonsMarginBottom"
        android:layout_marginTop="@dimen/playerButtonsMarginTop"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/songList_button"
            style="@style/PlayButtonsImageView"
            android:contentDescription="@string/playerButtons_SongList_description"
            android:src="@drawable/ic_song_list" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            style="PlayerButtonsViewStyle"/>

        <ImageView
            android:id="@+id/previous_button"
            android:contentDescription="@string/playerButtons_previous_description"
            style="@style/PlayButtonsImageView"
            android:src="@drawable/ic_previous_icon"/>

        <ImageView
            android:id="@+id/rewind_button"
            android:contentDescription="@string/playerButtons_rewind_description"
            style="@style/PlayButtonsImageView"
            android:src="@drawable/ic_rewind_icon" />

        <ImageView
            android:id="@+id/playStop_button"
            android:contentDescription="@string/playerButtons_playStop_description"
            style="@style/PlayButtonsImageView"
            android:src="@drawable/ic_play_icon" />

        <ImageView
            android:id="@+id/forward_button"
            android:contentDescription="@string/playerButtons_forward_description"
            style="@style/PlayButtonsImageView"
            android:src="@drawable/ic_forward_icon"/>

        <ImageView
            android:id="@+id/next_button"
            android:contentDescription="@string/playerButtons_next_description"
            style="@style/PlayButtonsImageView"
            android:src="@drawable/ic_next_icon" />

        <View
            android:layout_width="1dp"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            style="PlayerButtonsViewStyle"/>

        <ImageView
            android:id="@+id/artistInfo_button"
            style="@style/PlayButtonsImageView"
            android:contentDescription="@string/playerButtons_search_description"
            android:src="@drawable/ic_search"/>

    </LinearLayout>

</RelativeLayout>
